--- a/Gym project/gym.html
+++ b/Gym project/gym.html
@@ -68,7 +68,7 @@
 		<li style="list-style-type: none; display: inline-block; padding-left: 10px;"><a href="https://www.instagram.com/"><img src="images/instagram (1).png"></a></li>
 		</ul>
 	</div>
-	
+	<div></div>
 
 </body>
 </html>
